Fix white color text and background on mobile devices, add tablas taller agricola of bcn, cava ortiz of guanajuato

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -283,7 +283,7 @@
 
  .header-scrolled .logo,
  .header-scrolled .nav-links a {
-   color: white !important;
+   color: black;
  }
 
  nav {
